ckanext/data_alberta/fanstatic/css/main.css
/* ... */
@media screen and (max-width: 992px) { .alberta-theme ul.topics li a p { max-width: 85%; white-space: normal; } }
@media screen and (max-width: 768px) { .alberta-theme header.site-header #site-search { width: 100%; margin-top: 12px; }
    .alberta-theme header.site-header #site-search .form-item { width: 320px; }
    .alberta-theme a h2, .alberta-theme a a, .alberta-theme h2 h2, .alberta-theme h2 a { max-width: 310px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
    .alberta-theme .feature { margin-bottom: 12px; } }
/* ============= BODY RESPONSIVE ============= */
@media screen and (max-width: 992px) { .alberta-theme main { padding-bottom: 0; }
    .alberta-theme main footer.page-footer { position: relative; text-align: center; }
    .alberta-theme main footer.page-footer ul li { font-size: 14px; margin-right: 2px; }
    .alberta-theme main footer.page-footer ul li a { font-size: 14px; } }
/* ============= RESPONSIVE HELPERS ============= */
.show-md-down { display: none !important; }

@media screen and (max-width: 992px) { .show-md-down { display: inline-block !important; } }
/* ============= MODERNIZR ============= */
.no-svg .ab-logo { background-image: url("../img/AlbertaLogo.png") !important; background-size: 100%; }

@media screen and (max-width: 480px) { html.no-touch .alberta-theme header.site-header .local-nav-top nav ul li { float: left; clear: both; height: 34px; }
    html.no-touch .alberta-theme header.site-header .local-nav-top nav ul li.home-icon { display: none; }
    html.no-touch .alberta-theme header.site-header .local-nav-top nav ul li.active { background-image: none; }
    html.no-touch .alberta-theme header.site-header .local-nav-top nav ul li.active:before { font-family: FontAwesome; content: "\f0da"; color: #333132; }
    html.no-touch .alberta-theme header.site-header .local-nav-top nav ul li a { padding: 2px 0; line-height: 1; } }

select, select.form-control, input.form-control { -webkit-transition: color 500ms; -o-transition: color 500ms; transition: color 500ms; -webkit-transition: border-color 500ms; -o-transition: border-color 500ms; transition: border-color 500ms; }

.btn-default { -webkit-transition: background 500ms; -o-transition: background 500ms; transition: background 500ms; }

.btn-primary { -webkit-transition: background 500ms; -o-transition: background 500ms; transition: background 500ms; }

.alberta-theme { /* ======== DATA HEADERS / DEFINITION ======= */ /* ================= TABLES ================= */ }
.alberta-theme h2 .highlight-number { font-size: 42px; font-weight: 700; color: #24a9d1; }
.alberta-theme table { margin-bottom: 12px; padding-bottom: 6px; border-bottom: 3px solid #dddddd; }
.alberta-theme table thead tr { background: #24a9d1; }
.alberta-theme table thead tr th { color: #ffffff; border-bottom: 0; border-right: 1px solid #dddddd; padding: 6px 12px; max-width: 200px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; }
.alberta-theme table thead tr th a { color: #ffffff; }
.alberta-theme table tr { border-bottom: 0; }
.alberta-theme table tr.even { background: #f2f2f2; }
.alberta-theme table tr.odd { background: #ffffff; }
.alberta-theme table tr td { border-bottom: 0; border-right: 1px solid #dddddd; padding: 6px 12px; max-width: 200px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; }
.alberta-theme table tr td a { font-weight: 700; text-decoration: underline; color: #000; }

